@@ -1,1 +1,2 @@
 var/cache/pictor/thumbnails
+var/cache/pictor/resize
