@@ -13,6 +13,7 @@ pictor (2.0) UNRELEASED; urgency=low
     - get auto-rotate working for thumbnails and generated images
     - add 1920x1080 size
     - don't force size on image display
+    - move get_cache_filename() to a function
   * debian/rules, debian/dirs, debian/links: add support for a thumbnail
     cache dir
   * debian/control:
